# linkscribe

./: Dockerfile  database.py  easylink.py  firestore-key.json  main.py  pyproject.toml
.streamlit/: secrets.toml
